--- a/cool-music/Dockerfile
+++ b/cool-music/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:latest AS build
 RUN apt-get update
 RUN apt-get install openjdk-17-jdk -y
-COPY . .
+COPY src/main/java .
 RUN ./gradlew bootJar --no-daemon
 
 FROM openjdk:17-jdk-slim
